<resources>
    <string name="app_name">Task-Tracker</string>
    <string name="title">Title</string>
    <string name="the_title_of_the_task">The title of the task</string>
    <string name="descriptions">Description</string>
    <string name="this_is_the_description_of_the_task">This is the Description of the task.</string>
    <string name="start_time">Start Time:</string>
    <string name="start_time_date">28/06/2024</string>
    <string name="deadline_tag">Deadline:</string>
    <string name="deadline_time_date">Select a DeadLine</string>
    <string name="status_tag">Status:</string>
    <string name="status">Completed</string>
    <string name="task_description_hint">Enter the task description…</string>
    <string name="title_hint">Enter the task title</string>
    <string name="add_task">Add Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="task_details">Task Details</string>
    <string name="mark_as_completed">Mark As Completed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_task">Search Task</string>
    <string name="no_task_found">No Task Found !!</string>
    <string name="search_hint">Search Task by title or description</string>
    <string name="rotate_camera">rotate</string>
    <string name="take_photo">capture</string>
    <string name="retake">retake</string>
    <string name="confirm">confirm</string>
    <string name="from_camera">Take a Picture</string>
    <string name="from_gallery">Select from Gallery</string>
</resources>