<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.taskDetails.TaskDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_secondaryContainer"
            android:minHeight="?android:actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Add New Task"
            app:menu="@menu/edit_menu"
            app:navigationIcon="@drawable/ic_back"
            app:navigationIconTint="@color/md_theme_onSecondaryContainer"
            app:titleCentered="true"
            app:titleTextColor="@color/md_theme_onSecondaryContainer"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0"
        tools:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/second"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/start"
                app:layout_constraintEnd_toStartOf="@id/end"
                app:layout_constraintTop_toTopOf="@id/second"
                app:layout_constraintBottom_toTopOf="@id/description_layout"
                android:layout_marginTop="16dp"
                app:counterEnabled="true"
                app:counterMaxLength="100"
                app:helperText="*required"
                android:hint="@string/title"
                app:placeholderText="Enter task title">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_task_title"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:layout_marginHorizontal="8dp"
                    android:paddingHorizontal="16dp"
                    android:textSize="18sp"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/start"
                app:layout_constraintEnd_toStartOf="@id/end"
                app:layout_constraintTop_toBottomOf="@id/title_layout"
                android:layout_marginTop="16dp"
                app:counterEnabled="true"
                app:counterMaxLength="1000"
                app:helperText="*required"
                app:placeholderText="Enter task description"
                android:hint="@string/descriptions">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_task_description"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:layout_marginHorizontal="8dp"
                    android:paddingHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"/>
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_task_image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                android:layout_marginTop="16dp"
                android:src="@drawable/add_image_from_device"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/start"
                app:layout_constraintTop_toBottomOf="@id/description_layout"
                app:shapeAppearance="@style/image_shape" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_start_time_tag"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginTop="24dp"
                android:textSize="16sp"
                android:text="@string/start_time"
                app:layout_constraintStart_toEndOf="@id/start"
                app:layout_constraintTop_toBottomOf="@id/iv_task_image" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_start_time"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginStart="16dp"
                android:inputType="datetime"
                android:text="@string/start_time_date"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_start_time_tag"
                app:layout_constraintStart_toEndOf="@id/tv_start_time_tag"
                app:layout_constraintTop_toTopOf="@+id/tv_start_time_tag" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_deadline_tag"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:minHeight="48dp"
                android:text="@string/deadline_tag"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/start"
                app:layout_constraintTop_toBottomOf="@id/tv_start_time_tag"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_deadline"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginStart="16dp"
                android:text="@string/deadline_time_date"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_deadline_tag"
                app:layout_constraintStart_toEndOf="@id/tv_deadline_tag"
                app:layout_constraintTop_toTopOf="@+id/tv_deadline_tag" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.06"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.93" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:indeterminate="true"
        app:layout_constraintVertical_bias="0"
        app:indicatorColor="@color/md_theme_primaryContainer"
        android:visibility="gone"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/capture_layout">
        <androidx.camera.view.PreviewView
            android:id="@+id/camPreview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="100dp"
            android:background="@color/md_theme_onBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/camRotate"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/rotate_camera"
            android:src="@drawable/ic_rotate"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/centre"/>

        <ImageView
            android:id="@+id/camButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/take_photo"
            android:src="@drawable/ic_camera"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/centre"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/centre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/previewLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <ImageView
            android:id="@+id/capturedImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="24dp"
            android:background= "@color/md_theme_onBackground"
            android:contentDescription="@null"
            android:src="@drawable/ic_camera"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="27dp">

            <ImageView
                android:id="@+id/btnRetake"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:src="@drawable/ic_close"
                android:contentDescription="@string/retake"/>
            <ImageView
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:src="@drawable/ic_confirm"
                android:contentDescription="@string/confirm"/>

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>