<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.taskDetails.TaskDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_secondaryContainer"
            android:minHeight="?android:actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Edit Task"
            app:menu="@menu/edit_menu"
            app:navigationIcon="@drawable/ic_back"
            app:titleCentered="true"
            app:titleTextColor="@color/md_theme_onSecondaryContainer"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/start"
                app:layout_constraintEnd_toStartOf="@id/end"
                app:layout_constraintTop_toTopOf="@id/second"
                app:layout_constraintBottom_toTopOf="@id/description_layout"
                android:layout_marginTop="16dp"
                app:counterEnabled="true"
                app:counterMaxLength="100"
                app:helperText="*required"
                android:hint="@string/title"
                app:placeholderText="Enter task title">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_task_title"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:layout_marginHorizontal="8dp"
                    android:paddingHorizontal="16dp"
                    android:textSize="18sp"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/start"
                app:layout_constraintEnd_toStartOf="@id/end"
                app:layout_constraintTop_toBottomOf="@id/title_layout"
                android:layout_marginTop="16dp"
                app:counterEnabled="true"
                app:counterMaxLength="1000"
                app:helperText="*required"
                app:placeholderText="Enter task description"
                android:hint="@string/descriptions">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_task_description"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:layout_marginHorizontal="8dp"
                    android:paddingHorizontal="16dp"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_task_image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/task_example"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/start"
                app:layout_constraintTop_toBottomOf="@id/description_layout"
                app:shapeAppearance="@style/image_shape" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_start_time_tag"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/start_time"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/start"
                app:layout_constraintTop_toBottomOf="@id/iv_task_image"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_start_time"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/start_time_date"
                android:textColor="#42E925"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_start_time_tag"
                app:layout_constraintStart_toEndOf="@id/tv_start_time_tag"
                app:layout_constraintTop_toTopOf="@+id/tv_start_time_tag" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_deadline_tag"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/deadline_tag"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/start"
                app:layout_constraintTop_toBottomOf="@id/tv_start_time_tag" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_deadline"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/deadline_time_date"
                android:textColor="#42E925"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_deadline_tag"
                app:layout_constraintStart_toEndOf="@id/tv_deadline_tag"
                app:layout_constraintTop_toTopOf="@+id/tv_deadline_tag" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_task_status_tag"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="36dp"
                android:text="@string/status_tag"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/start"
                app:layout_constraintTop_toBottomOf="@id/tv_deadline_tag"
                app:layout_constraintBottom_toBottomOf="parent"/>

<!--            <com.google.android.material.textview.MaterialTextView-->
<!--                android:id="@+id/tv_task_status"-->
<!--                style="@style/TextAppearance.AppCompat.Title"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="16dp"-->
<!--                android:text="@string/status"-->
<!--                android:textColor="#42E925"-->
<!--                android:textSize="16sp"-->
<!--                app:layout_constraintBottom_toBottomOf="@+id/tv_task_status_tag"-->
<!--                app:layout_constraintStart_toEndOf="@id/tv_task_status_tag"-->
<!--                app:layout_constraintTop_toTopOf="@+id/tv_task_status_tag" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/status"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                app:layout_constraintTop_toTopOf="@id/tv_task_status_tag"
                app:layout_constraintBottom_toBottomOf="@id/tv_task_status_tag"
                app:layout_constraintStart_toEndOf="@id/tv_task_status_tag"
                android:layout_marginStart="16dp">

                <AutoCompleteTextView
                    android:id="@+id/status_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    tools:ignore="LabelFor"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.06" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.93" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:indeterminate="true"
        app:indicatorColor="?colorPrimaryContainer"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>